# tuto

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
dataset/: README.md  aggregates.json  l1_triage.jsonl  l2_arbiter.jsonl  l2_judgments.jsonl
docker/: api.Dockerfile
docs/: ARCHITECTURE.md  NEXT.md  PRD.md  REPORT-acl-2026-draft.en.md  REPORT-acl-2026-draft.md  REPORT-acl-2026.en.md  SUSPICIOUS-review-checklist.md
src/tuto/: cli.py  models.py
src/tuto/check/: run_one.py  service.py
src/tuto/fulltext/: fetch.py  retrieve.py
src/tuto/ingest/: acl_anthology.py  arxiv_preprints.py
src/tuto/l2/: arbiter.py  compare.py  llm_client.py  paper_audit.py  support_fulltext.py  support_sample.py
src/tuto/parse/: grobid_extract.py  refcount_check.py
src/tuto/triage/: analyze.py  llm_judge.py  rescue.py
src/tuto/verify/: cito_backend.py  classify.py  local_index.py  normalize.py  refresh_dblp.py
tests/: test_ref_extract.py  test_resolver_guard.py
web/: Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
web/app/: apple-icon.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/app/check/: CheckClient.tsx  page.tsx
web/app/report/: page.tsx
web/app/report/zh/: page.tsx
web/components/: icons.tsx
web/lib/: report.tsx
