[project]
name = "tuto"
version = "0.1.0"
description = "Citation audit pipeline: extract references from published papers and verify they exist."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27",
    "tqdm>=4.66",
    "defusedxml>=0.7",
    "pdfplumber>=0.11",
]

[project.scripts]
tuto = "tuto.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuto"]

[tool.ruff]
line-length = 100
target-version = "py312"
